# certificate-management

./: .gitignore  README.md
backend/: .dockerignore  Cargo.toml  docker-compose.yml
backend/crates/ca-engine/: Cargo.toml
backend/crates/ca-engine/src/: authority.rs  builder.rs  errors.rs  lib.rs  parser.rs  pem.rs  types.rs
backend/crates/shared/: Cargo.toml
backend/crates/shared/src/: lib.rs  tls.rs  utils.rs
backend/crates/shared/src/config/: mod.rs
backend/crates/shared/src/dto/: mod.rs
backend/crates/shared/src/events/: mod.rs
backend/crates/shared/src/telemetry/: metrics.rs  mod.rs
backend/docker/postgres/: init.sql
backend/services/certificate-service/: Cargo.toml  Dockerfile
backend/services/certificate-service/migrations/: 202607020001_create_certificates.sql
backend/services/certificate-service/src/: app.rs  error.rs  main.rs
backend/services/certificate-service/src/api/handlers/: certificates.rs
backend/services/certificate-service/src/api/routes/: mod.rs
backend/services/certificate-service/src/application/services/: certificate.rs
backend/services/certificate-service/src/config/: mod.rs
backend/services/certificate-service/src/domain/events/: mod.rs
backend/services/certificate-service/src/domain/models/: certificate.rs
backend/services/certificate-service/src/dto/: certificate.rs
backend/services/certificate-service/src/infrastructure/database/postgres/: mod.rs
backend/services/certificate-service/src/infrastructure/messaging/nats/: mod.rs
backend/services/certificate-service/src/ports/: mod.rs  publisher.rs  repository.rs
backend/services/inventory-service/: Cargo.toml  Dockerfile
backend/services/inventory-service/migrations/: 202607020002_create_inventory.sql
backend/services/inventory-service/src/: app.rs  error.rs  lib.rs  main.rs
backend/services/inventory-service/src/api/handlers/: health.rs  inventory.rs  mod.rs
backend/services/inventory-service/src/api/routes/: mod.rs
backend/services/inventory-service/src/application/services/: inventory.rs
backend/services/inventory-service/src/config/: mod.rs
backend/services/inventory-service/src/domain/events/: mod.rs
backend/services/inventory-service/src/domain/models/: inventory.rs
backend/services/inventory-service/src/dto/: inventory.rs
backend/services/inventory-service/src/infrastructure/: mod.rs
backend/services/inventory-service/src/infrastructure/database/postgres/: mod.rs
backend/services/inventory-service/src/infrastructure/messaging/nats/: mod.rs
backend/services/inventory-service/src/ports/: repository.rs
backend/tools/certgen/: Cargo.toml
backend/tools/certgen/src/: main.rs
docs/: PKI.txt  TLS.txt  UX_improvements.txt  assignment_1.txt  assignment_2.txt  assignment_3.txt  docker-refector.txt  frontend_architecture.txt  frontend_implementation.txt  infra-deployment.txt  project_overview.txt  refector_current_structure.txt  updates_after_checking_inventory_service.txt
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/api/certificate/[...path]/: route.ts
frontend/app/api/inventory/[...path]/: route.ts
frontend/app/certificates/import/: page.tsx
frontend/app/certificates/new/: page.tsx
frontend/app/inventory/: page.tsx
frontend/app/inventory/[id]/: page.tsx
frontend/components/dashboard/: DashboardStats.tsx
frontend/components/inventory/: InventoryClient.tsx
frontend/components/ui/: HeaderNav.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  pagination.tsx  table.tsx
frontend/lib/: utils.ts
frontend/lib/api/: api-client.ts
frontend/services/: certificate-api.ts  inventory-api.ts
frontend/types/: index.ts
