[workspace]
resolver = "2"
members = [
    "services/certificate-service",
    "services/inventory-service",
    "crates/ca-engine",
    "crates/shared",
    "tools/certgen"
]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
rustls-pki-types = "1"
rustls = { version = "0.23", features = ["ring"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
tower = "0.5"
async-nats = "0.38"
futures-util = "0.3"
serde_json = "1"
prometheus = { version = "0.13", features = ["process"] }
x509-parser = "0.16"
ring = "0.17"
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid"] }
tower-http = { version = "0.6", features = ["request-id", "trace", "util", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
config = "0.14"
thiserror = "1"
axum = { version = "0.8.1", features = ["macros"] }
async-trait = "0.1"
rcgen = "0.12"
time = "0.3"

# Internal Workspace Crates
ca-engine = { path = "crates/ca-engine" }
shared = { path = "crates/shared" }
