[package]
name = "inventory-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rustls = { workspace = true }
async-nats = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }

# Workspace dependencies
shared = { workspace = true }
